# tastybench

./: README.md  citation_ranking.csv  citation_velocity.py  pyproject.toml  requirements.txt  stupied_proxies.txt  test_stupid_proxies.py
acceleration-proxies/: citation_velocity.py  test_stupid_proxies.py
acceleration-proxies/results/20251108-000000/: citation_ranking.csv
acceleration-proxies/results/20251108_013017/: citation_ranking.csv  config.json
acceleration-proxies/stupid_proxies/: pearson_pvalues.csv  spearman_correlation.csv  spearman_pvalues.csv
model-elicitation/: compare.py  elicit_elo.py  util.py
model-elicitation/data/: llm_rl.csv  llm_rl_with_ideas.csv  llm_rl_with_max_goodhart_ideas.csv  llm_rl_yix_curate.csv  llm_rl_yix_curate_with_ideas.csv
model-elicitation/data/curated/: metadata.json
model-elicitation/data/curated/gpt-oss-120b/: 20-epochscorrelation.json  50-epochscorrelation.json
model-elicitation/data/goodhart-curated/: metadata.json
model-elicitation/data/gpt-oss-120b/: elo.csv  rankings.csv
model-elicitation/data/gpt-oss-20b/: correlation.json  elo.csv  rankings.csv
model-elicitation/data/max-goodhart-curated/: metadata.json
model-elicitation/data/test-experiment/: metadata.json
model-elicitation/prompts/: extract_choice.md  extract_idea.md  judge_ideas.md  judge_ideas_goodhart copy.md
model-elicitation/prompts/curated/: extract_idea.md  judge_ideas_curated.md  judge_ideas_goodhart_curated.md  judge_ideas_goodhart_curated_max.md
results/20251108_032707/: config.json
stupid_proxies/: pearson_correlation.csv
(+94 files in other folders)
