[project]
name = "tastybench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "ollama>=0.6.0",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
